src/CharacterWidth.h
@@ -1,0 +1,8 @@
+#ifndef CHARACTERINFO_H
+#define CHARACTERINFO_H
+
+#include <QtGlobal>
+
+int characterWidth(uint ucs4);
+
+#endif
