src/Filter.cpp
@@ -224,7 +224,7 @@ void Filter::getLineColumn(int position, int &startLine, int &startColumn)
 
         if (_linePositions->value(i) <= position && position < nextLine) {
             startLine = i;
-            startColumn = string_width(buffer()->mid(_linePositions->value(i),
+            startColumn = Character::stringWidth(buffer()->mid(_linePositions->value(i),
                                                      position - _linePositions->value(i)));
             return;
         }
